kubernetes/wazuh/lke/dashboard-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: wazuh
spec:
  type: ClusterIP
