kubernetes/wazuh/lke/wazuh-workers-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wazuh-workers
  namespace: wazuh
spec:
  type: ClusterIP
